--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  text-align: center;
+}
+
 th,
 td {
   padding: 10px 20px;
@@ -6,6 +10,11 @@ td {
 
 tr {
   border-bottom: 1px solid gray;
+}
+
+table {
+  margin: 0 auto;
+  text-align: initial;
 }
 
 /* style from: https://stackoverflow.com/a/40035407/6908282 */
